# 4220-project

./: .gitignore  README.md  build_and_run.sh  download_yolo.sh  vm_setup.sh
gpu_object_detection/: CMakeLists.txt  README.md  package.xml
gpu_object_detection/config/: compare.rviz  detector_params.yaml
gpu_object_detection/include/gpu_object_detection/: detection_pipeline.hpp  detection_pipeline_cuda.hpp  detector_node.hpp
gpu_object_detection/launch/: detector.launch.py  detector_compare.launch.py  dual_detector.launch.py
gpu_object_detection/src/: detection_pipeline.cpp  detection_pipeline_cuda.cu  detector_node.cpp  main.cpp
