<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
            schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gpu_object_detection</name>
  <version>0.1.0</version>
  <description>
    GPU Accelerated Real-Time Object Detection – CPU baseline stage.
    ROS2 node that subscribes to a camera image topic, runs a CPU-based
    OpenCV DNN (YOLO) or Canny edge-detection pipeline, and publishes the
    annotated output image with per-frame latency and FPS metrics.
  </description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <!-- Build-time tools -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Core ROS2 runtime -->
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>

  <!-- OpenCV (installed system-wide or via rosdep) -->
  <depend>libopencv-dev</depend>

  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
